Add refresh token + profile settings
